# NIVA

./: ARTIFACT-EVALUATION.md  LICENSE.md  README.md
bulletproof/: CMakeLists.txt  Dockerfile
bulletproof/include/: helper.hpp  norm_bound.hpp  norm_eq.hpp  range_proof.hpp
bulletproof/src/: CMakeLists.txt  helper.cpp  norm_bound.cpp  norm_eq.cpp  range_proof.cpp
bulletproof/test/: CMakeLists.txt  test_helper.cpp  test_norm_bound.cpp  test_norm_eq.cpp  test_range_proof.cpp
fhe/: CMakeLists.txt  Dockerfile
fhe/include/: fhe.hpp  helper.hpp  oe.hpp
fhe/src/: CMakeLists.txt  fhe.cpp  helper.cpp  oe.cpp
fhe/test/: CMakeLists.txt  test_fhe.cpp  test_helper.cpp
pear/: requirements.txt
pear/src/flpcp/: __init__.py  base.py  binary_validation.py  norm_bound_validation.py  range_validation.py
pear/src/ipfe/: helper.py  ipfe.py
pear/tests/: test_binary_validation.py  test_ipfe.py  test_norm_bound_validation.py  test_range_validation.py
